worked on radius, perimeter, area & equation methods

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -2,9 +2,9 @@ hibernate.connection.driver_class = com.mysql.cj.jdbc.Driver
 
 hibernate.connection.url = jdbc:mysql://127.0.0.1:3306/eq_circle?useSSL=false&serverTimezone=UTC
 
-hibernate.connection.username = root
+hibernate.connection.username = your_mysql_username
 
-hibernate.connection.password = .
+hibernate.connection.password = your_mysql_password
 
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
